--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -21,6 +21,7 @@
         "react/react-in-jsx-scope": "off",
         "linebreak-style": "off",
         "no-unused-vars": "off",
+        "react/jsx-no-bind": "off",
         "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }]
     }
 }
